Updated the logic of loading images, added a route for loading routes
