# server/server.js
@@ -18,7 +18,6 @@ app.use(express.json());
 app.use(express.static(path.join(__dirname, "..", "public")));
 
 app.use("/doc", swaggerUi.serve, swaggerUi.setup(openApiDocumentation));
-
 app.use(pageRoutes);
 
 app.post("/users/reg", async (req, res) => {
@@ -30,10 +29,13 @@ app.post("/users/reg", async (req, res) => {
     user_password,
   } = req.body;
 
-  const salt = await bcrypt.genSalt(Number(process.env.SALT));
-  const hash = await bcrypt.hash(user_password, salt);
-
   try {
+    const saltRounds = Number(process.env.SALT);
+    if (isNaN(saltRounds)) throw new Error("SALT в .env не является числом");
+
+    const salt = await bcrypt.genSalt(saltRounds);
+    const hash = await bcrypt.hash(user_password, salt);
+
     const newUser = await Users.create({
       user_name,
       user_lastname,
@@ -42,7 +44,7 @@ app.post("/users/reg", async (req, res) => {
       user_password: hash,
     });
 
-    res.status(201).json({ message: "Вы успешно зарегестрировались", newUser });
+    res.status(201).json({ message: "Вы успешно зарегистрировались", newUser });
   } catch (err) {
     console.error("Ошибка регистрации", err);
     res.status(400).json({ message: "Ошибка при регистрации" });
@@ -53,74 +55,41 @@ app.post("/users/log", async (req, res) => {
   const { user_email, user_password } = req.body;
 
   try {
-    const user = await Users.findOne({
-      where: {
-        user_email,
-      },
-    });
+    const user = await Users.findOne({ where: { user_email } });
 
     if (!user) {
-      res.status(404).json({ message: "Пользователь не найден" });
+      return res.status(404).json({ message: "Пользователь не найден" });
+    }
+
+    const isMatch = await bcrypt.compare(user_password, user.user_password);
+    if (isMatch) {
+      res.status(200).json({ message: "Успешный вход" });
     } else {
-      if (await bcrypt.compare(user_password, user.user_password)) {
-        res.status(200).json({ message: "Успешный вход" });
-      } else {
-        res.status(404).json({ message: "Неверный пользователь или пароль" });
-      }
+      res.status(400).json({ message: "Неверный пользователь или пароль" });
     }
   } catch (error) {
     console.error(error);
-    res.status(400).json({ message: "Ошибка входа" });
+    res.status(500).json({ message: "Ошибка входа" });
   }
 });
 
-app.post("/maps/new/route", async (req, res) => {
-  const { name_route, total_distance, total_time } = req.body;
-
+app.post("/upload/new/route", async (req, res) => {
   try {
-    const route = await Routes.create({
-      name_route,
-      total_distance,
-      total_time,
-    });
-
-    res.status(200).json({ route_id: route.id_route });
-
-  } catch (err) {
-    console.error("Ошибка при создании нового маршрута" + err);
-  }
-
-});
-
-app.post("/maps/new/route/points", async (req, res) => {
-  const { route_id, points } = req.body;
-
-  try {
-    const savedPoints = await RoutesPoints.bulkCreate(
-      points.map(point => ({
-        route_id: route_id,
-        latitude: point.latitude,
-        longitude: point.longitude
-      }))
-    );
-    
-    res.status(200).json({ message: 'Метки сохранены успешно' });
-    
+    console.log(req.body);
+    res.status(200).json({ message: "Маршрут успешно получен" });
   } catch (error) {
-    console.error(error);
-    
-    res.status(500).json({ error: 'Ошибка при сохранении точек' });
+    console.error("Ошибка при получении маршрута:", error);
+    res.status(500).json({ message: "Ошибка при обработке маршрута" });
   }
 });
 
-app.post("/upload/images", upload.single('file'), (req, res) => {
-  try{
-    res.status(200).json({message: "файл успешно загружен"});
-  } catch(err){
-    res.status(400).json({message: "Произошла ошибка при загрузке файла"});
+app.post("/upload/images", upload.array("file"), (req, res) => {
+  try {
+    res.status(200).json({ message: "Файл успешно загружен" });
+  } catch (err) {
+    res.status(400).json({ message: "Произошла ошибка при загрузке файла" });
   }
-    
-})
+});
 
 app.listen(Number(process.env.PORT), () => {
   console.log(`Сервер запущен на http://localhost:${process.env.PORT}`);
